Minesweeper v2: dynamically generates mines
Dynamically generates mines and nearby field values using JavaScript

--- a/Minesweeper.html
+++ b/Minesweeper.html
@@ -22,6 +22,7 @@
 			<li>If you click on a mine, it's game over.</li>
 			<li>Keep playing to improve your time!</li>
 		</ol>
+		<p>This web page works best with Google Chrome.</p>
 	</div>
 	<div id="div2">
 		<table>
