--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ You can play this game <a href="https://pitt.edu/%7Eshs174/Minesweeper.html">her
 <a id="about-minesweeper" class="anchor" href="#about-minesweeper" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Minesweeper</h3>
 
 <p>Minesweeper is a single player puzzle game where users need to uncover cells or flag cells to find all the mines without detonating any of them. If the player uncovers the mine, he loses the game. If he uncovers a cell, the cell displays a number which describes the number of mines that in the adjacent cells.</p>
-<p><a href="images/minesweeper_windows.png">Minesweeper on Windows image</a></p>
+<p><img src="images/minesweeper_windows.png" alt="Minesweeper on Windows image"></p>
 
 <h3>
 <a id="developing-minesweeper" class="anchor" href="#developing-minesweeper" aria-hidden="true"><span class="octicon octicon-link"></span></a>Developing Minesweeper</h3>
