--- a/Minesweeper.html
+++ b/Minesweeper.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Minesweeper</title>
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/public/css/Minesweeper.css" />
-<script type="text/javascript" src="{{ site.baseurl }}/public/js/Minesweeper.js"></script>
+<link rel="stylesheet" type="text/css" href="http://ss37.github.io/Minesweeper/public/css/Minesweeper.css" />
+<script type="text/javascript" src="http://ss37.github.io/Minesweeper/public/js/Minesweeper.js"></script>
 </head>
 <body>
 	<div id="div1">
